Fixed some spacing issues in the projects.

--- a/css/main.css
+++ b/css/main.css
@@ -457,3 +457,7 @@ margin-bottom: 20px;
   font-size: 300px;
   margin-bottom: 20px;
 }
+
+.carousel{
+  margin-bottom: 20px;
+}
